# cryptocurrency-tracker

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  script.js  style.css
