[package]
name = "crypto_track"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.33.0"
actix-web = "4"
chrono = "0.4.39"
actix-files = "0.6.6"
anyhow = "1.0.96"
